--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "ios",
     "android"
   ],
-  "repository": "https://github.com/",
-  "author": "prafulbyjus <praful.ojha@byjus.com> (https://github.com/)",
+  "repository": "https://github.com/prafulbyjus/react-native-create-video-thumbnail",
+  "author": "prafulbyjus <praful.ojha@byjus.com> (https://github.com/prafulbyjus/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com//issues"
